--- a/HelloPhotino/HelloPhotino/wwwroot/index.html
+++ b/HelloPhotino/HelloPhotino/wwwroot/index.html
@@ -1,34 +1,15 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photino for .NET Demo</title>
-    <link rel="stylesheet" href="assets/main.css" />
-</head>
-<body>
-    <img src="assets/photino-logo.svg" alt="Photino" class="logo center" />
-
-    <h1 class="text-center">Hello to Photino for .NET</h1>
-
-    <p class="text-center">
-        This is a static HTML file with CSS and JavaScript, served from a local web root. 
-        Click on the button below to send a message to the backend. 
-        It will respond and send a message back to the UI. Shiit
-    </p>
-    <button class="primary center" onclick="callDotNet()">Call .NET</button>
-
-    <script src="app://dynamic.js"></script>
-
-    <script>
-        window.external.receiveMessage(message => alert(message));
-
-        function callDotNet() {
-            window.external.sendMessage("{ hello }");
-        }
-
-        
-    </script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
+    <script type="module" src="/assets/index.d02e89bc.js"></script>
+    <link rel="stylesheet" href="/assets/index.d93758c6.css">
+  </head>
+  <body>
+    <div id="root"></div>
+    
+  </body>
 </html>
